assets/section-footer.css
.footer {
  border-top: 0.1rem solid rgba(var(--color-foreground), 0.08);
  background-color: black;
}

.footer:not(.color-scheme-1) {
  border-top: none;
}

.footer__content-top {
  display: block;
}

.footer-block--menu {
  display: flex;
  align-items: center;
}

.footer__content-bottom {
  border-top: solid 0.1rem rgba(var(--color-foreground), 0.08);
  margin-bottom: 59px;
}

.footer__content-bottom:only-child {
  border-top: 0;
}

.footer__content-bottom-wrapper {
  display: flex;
  width: 100%;
}

.footer__localization:empty + .footer__column--info {
  align-items: center;
}

.footer__column {
  width: 100%;
  align-items: flex-end;
}

.footer__column--info {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding-left: 2rem;
  padding-right: 2rem;
}

.footer-block:only-child:last-child {
  text-align: center;
  max-width: 76rem;
  margin: 0 auto;
}

.footer-block:empty {
  display: none;
}

.footer-block--newsletter {
  display: flex;
  align-items: flex-end;
  margin-top: 3rem;
  gap: 1rem;
}

.footer-block--newsletter:only-child {
  margin-top: 0;
}

.footer-block__heading {
  margin-bottom: 2rem;
  margin-top: 0;
  font-size: calc(var(--font-heading-scale) * 1.6rem);
}

.footer__list-social:empty,
.footer-block--newsletter:empty {
  display: none;
}

.footer__follow-on-shop {
  display: flex;
  text-align: center;
}

.footer__list-social.list-social:only-child {
  justify-content: center;
}

.footer-block__newsletter {
  text-align: center;
  flex-grow: 1;
}

.newsletter-form__field-wrapper {
  max-width: 36rem;
}

.footer__localization {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-content: center;
  flex-wrap: wrap;
  padding: 1rem 1rem 0;
}

.footer__localization:empty {
  display: none;
}

.footer__localization h2 {
  margin: 1rem 1rem 0.5rem;
  color: rgba(var(--color-foreground), 0.75);
}

.footer__content-bottom-wrapper--center {
  justify-content: end;
  padding: 0.5rem;
}

.footer__blocks-wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 32px;
}

@keyframes appear-down {
  0% {
    opacity: 0;
    margin-top: -1rem; 
  }
  100% {
    opacity: 1;
    margin-top: 0;
  }
}

.footer-block__details-content {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-around;
  flex-direction: column;
  gap: 32px;
}

.footer-block__details-content .list-menu__item--link,
.copyright__content a {
  color: rgba(var(--color-foreground), 0.75);
}

.footer-block__details-content .list-menu__item--link {
  color: hsl(from var(--color-primary) h s l / 0.6);
  padding: 0;
}

.footer-block__details-content .list-menu__item--link:hover {
  color: hsl(from var(--color-primary) h s l / 0.8);
}

.footer-block__details-content .list-menu__item--active {
  transition: text-decoration-thickness var(--duration-short) ease;
  color: hsl(from var(--color-primary) h s l / 0.8);
}

.footer-block-image {
  display: flex;
}

.footer-block-image.left {
  justify-content: flex-start;
}

.footer-block-image.center {
  justify-content: center;
}

.footer-block-image.right {
  justify-content: flex-end;
}

.footer-block__image-wrapper {
  overflow: hidden !important;
}

.footer-block__image-wrapper img {
  display: block;
  height: auto;
  max-width: 100%;
}

.footer-block__brand-info {
  text-align: left;
  display: flex;
  align-items: center;
  gap: 32px;
  flex-direction: column;
}

.footer-block__brand-info .social-icons {
  display: flex;
  align-items: center;
  color: var(--color-accent-1);
}

.footer-block__brand-info .social-icons .social-icons__title {
  color: var(--color-accent-1);
  font-size: 1.3rem;
  font-weight: 600;
}

.footer-block:only-child .footer-block__brand-info {
  text-align: center;
}

.footer-block:only-child > .footer-block__brand-info > .footer-block__image-wrapper {
  margin-left: auto;
  margin-right: auto;
}

.footer-block-image > img,
.footer-block__brand-info > img {
  height: auto;
}

.footer-block:only-child .footer-block__brand-info .footer__list-social.list-social {
  justify-content: center;
}

.footer-block__brand-info .footer__list-social.list-social {
  justify-content: flex-start;
}

.footer-block__details-content .placeholder-svg {
  max-width: 20rem;
}

.copyright__content {
  font-size: 1.1rem;
}

.copyright__content a {
  color: currentColor;
  text-decoration: none;
}

.policies {
  display: inline;
}

.policies li {
  display: inline-flex;
  justify-content: center;
  align-items: center;
}

.policies li::before {
  content: '\00B7';
  padding: 0 0.8rem;
}

.policies li a {
  padding: 0.6rem 0;
  display: block;
}

@keyframes animateLocalization {
  0% {
    opacity: 0;
    transform: translateY(0);
  }

  100% {
    opacity: 1;
    transform: translateY(-1rem);
  }
}

.footer-block__shop-email {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 1.3rem;
  color: #DCD4CE;
}

.footer-block__shop-email a {
  color: currentColor;
  text-decoration: none;
  font-size: 1.3rem;
}

.footer-block__shop-email .svg-wrapper {
  height: 3rem;
  width: 3rem;
}

/* Media Queries */
@media screen and (max-width: 1023px) {
  .footer .grid {
    display: block;
  }

  .footer-block.grid__item {
    padding: 0;
    width: 100%;
  }

  .footer-block.grid__item:first-child {
    margin-top: 0;
  }

  .footer__content-top {
    padding-bottom: 3rem;
    padding-left: calc(4rem / var(--font-body-scale));
    padding-right: calc(4rem / var(--font-body-scale));
  }

  .footer__content-bottom {
    flex-wrap: wrap;
    padding-top: 0;
    padding-left: 0;
    padding-right: 0;
    row-gap: 1.5rem;
  }

  .footer__content-bottom-wrapper {
    flex-wrap: wrap;
    row-gap: 1.5rem;
    justify-content: center;
  }

  .footer__content-bottom.scroll-trigger.animate--slide-in {
    animation: none;
    opacity: 1;
    transform: inherit;
  }

  .footer__localization:empty + .footer__column {
    padding-top: 1.5rem;
  }

  .footer-block.footer-block--menu {
    text-align: left;
    justify-content: center;
  }

  .footer-block--newsletter {
    display: flex;
    flex-direction: column;
    flex: 1 1 100%;
    align-items: center;
    gap: 3rem;
  }

  .footer__list-social.list-social,
  .footer__follow-on-shop,
  .footer-block__newsletter {
    display: flex;
    justify-content: center;
  }

  .footer-block__newsletter {
    flex-direction: column;
  }

  .footer-block-image,
  .footer-block-image.left,
  .footer-block-image.center,
  .footer-block-image.right {
    justify-content: center;
  }

  .policies li a {
    padding: 0.6rem 0;
  }
}

@media screen and (min-width: 1024px) {
  .footer__content-top .grid {
    row-gap: 6rem;
    margin-bottom: 0;
  }

  .footer__column--info {
    padding-left: 0;
    padding-right: 0;
    align-items: flex-end;
  }

  .footer-block {
    display: block;
    margin-top: 0;
  }

  .footer-block--newsletter {
    flex-wrap: nowrap;
    justify-content: center;
  }

  .footer-block__newsletter:not(:only-child) {
    text-align: left;
    margin-right: auto;
  }

  .footer-block__newsletter:not(:only-child) .footer__newsletter {
    justify-content: flex-start;
    margin: 0;
  }

  .footer-block__newsletter:not(:only-child) .newsletter-form__message--success {
    left: auto;
  }

  .footer__follow-on-shop {
    margin-bottom: 0.4rem;
  }

  .footer__follow-on-shop:first-child:not(:last-child) {
    justify-content: flex-start;
    margin-right: auto;
    text-align: left;
  }

  .footer__follow-on-shop:not(:first-child):not(:last-child) {
    justify-content: flex-end;
    text-align: right;
  }

  .footer-block__newsletter + .footer__list-social {
    margin-top: 0;
  }

  .footer__localization {
    padding: 0.4rem 0;
    justify-content: flex-start;
  }

  .footer__localization h2 {
    margin: 1rem 0 0;
  }

  .footer__payment {
    margin-top: 1.5rem;
  }

  .footer__content-bottom-wrapper:not(.footer__content-bottom-wrapper--center) .footer__copyright {
    text-align: right;
  }

  .footer__blocks-wrapper {
    flex-direction: row;
  }

  .footer-block__details-content {
    margin-bottom: 0;
    flex-direction: row;
    gap: 0px;
  }

  .footer-block__details-content > p,
  .footer-block__details-content > li {
    padding: 0;
  }

  .footer-block:only-child li {
    display: inline;
  }

  .footer-block__details-content > li:not(:last-child) {
    margin-right: 1.5rem;
  }

  .footer-block__details-content .list-menu__item--link:hover,
  .copyright__content a:hover {
    text-decoration: underline;
    text-underline-offset: 0.3rem;
  }

  .footer-block__details-content .list-menu__item--active:hover {
    text-decoration-thickness: 0.2rem;
  }

  .footer-block__details-content .list-menu__item--link {
    display: inline-block;
    font-size: 1.4rem;
  }

  .footer-block__details-content > :first-child .list-menu__item--link {
    padding-top: 0;
  }

  .footer-block__brand-info {
    flex-direction: row;
    justify-content: start;
    gap: 48px;
  }

  .policies li a {
    padding: 0;
  }

  .footer__content-bottom {
    margin-bottom: 0;
  }
}

@media screen and (min-width: 1440px) {
  .footer-block__brand-info {
    gap: 64px;
  }
}

@media screen and (min-width: 990px) {
  .footer-block__heading {
    font-size: calc(var(--font-heading-scale) * 1.8rem);
  }
}

/* check for flexbox gap in older Safari versions */
@supports not (inset: 10px) {
  @media screen and (max-width: 1023px) {
    .footer .grid {
      margin-left: 0;
    }
  }

  @media screen and (min-width: 1024px) {
    .footer__content-top .grid {
      margin-left: -3rem;
    }

    .footer__content-top .grid__item {
      padding-left: 3rem;
    }
  }
}

